--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <meta charset="UTF-8">
 
-    <title>Max's Portfolio</title>
+    <title>Akkiko's Portfolio</title>
 
     <link rel="stylesheet" href="style.css">
 
@@ -16,7 +16,7 @@
 
     <header>
 
-        <h1>Max's Portfolio</h1>
+        <h1>Akkiko's Portfolio</h1>
 
         <nav>
 
@@ -40,7 +40,7 @@
 
             <h2>About Me</h2>
 
-            <p>Hi there! I'm Max, a web developer based in Los Angeles. I have a passion for creating responsive and user-friendly websites that make people's lives easier. When I'm not coding, you can find me hiking in the mountains or trying out new coffee shops.</p>
+            <p>Hi there! I'm Akkiko, a web developer based in Los Angeles. I have a passion for creating responsive and user-friendly websites that make people's lives easier. When I'm not coding, you can find me hiking in the mountains or trying out new coffee shops.</p>
 
         </section>
 
