--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
             <h2>About Me</h2>
 
-            <p>Hi there! I'm Akkiko, a web developer based in Los Angeles. I have a passion for creating responsive and user-friendly websites that make people's lives easier. When I'm not coding, you can find me hiking in the mountains or trying out new coffee shops.</p>
+            <p>Hi there! I'm Akkiko, a web developer based in Catarman. I have a passion for creating responsive and user-friendly websites that make people's lives easier. When I'm not coding, you can find me hiking in the mountains or trying out new coffee shops.</p>
 
         </section>
 
@@ -98,7 +98,7 @@
 
     <footer>
 
-        <p>&copy; 2022 Max's Portfolio</p>
+        <p>&copy; 2024 Akkiko's Portfolio</p>
 
     </footer>
 
